--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: Unicode
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/student
+    url: jdbc:mysql://localhost:3306/unicode
     username: test
     password: 1234
   jpa:
